--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
           libinput_branch: "1.19.0"
           tag: 1.19.0
         - libinput_repo: "https://gitlab.freedesktop.org/libinput/libinput.git"
+          libinput_branch: "1.19.1"
+          tag: 1.19.1
+        - libinput_repo: "https://gitlab.freedesktop.org/libinput/libinput.git"
           libinput_branch: "main"
           tag: main
     runs-on: ubuntu-latest
